# rumex

./: .gitignore  README.md  README.rst  README.rst.new  pyproject.toml  run_tests.sh
build_docs/: api.py
docs/: api.md  api.rst
docs/examples/: extending.py  from_readme.py  hooks.py  running_tests.py  scenario_with_examples.py  table_and_text_block.py  tags.py
docs/examples/finding_feature_files/: find_files.py
docs/examples/finding_feature_files/feature_files/more_files/: second_file.feature
docs_builder/: README.rst.template  api.rst.template  build.py  doc.py
rumex/: __init__.py  runner.py  utils.py
rumex/parsing/: builder.py  core.py  parser.py  table.py  tokenizer.py
rumex/parsing/state_machine/: file_sm.py  scenarios_sm.py  state_machine.py
rumex/tests/: __init__.py  test_data.py  test_error_reporting.py  test_execution.py  test_no_execution_cases.py  test_simple_execution.py  test_table.py
tests/: test_consistent_version.py  test_data.py  test_docs.py  test_error_reporting.py  test_execution.py  test_no_execution_cases.py  test_simple_execution.py  test_table.py  test_unit.py
