[tool.poetry]
name = "rumex"
version = "0.2.2"

description = ""
authors = ["uigctaw <uigctaw@metadata.social>"]
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
bandit = "^1.7.4"
mypy = "^0.971"
flake8 = "^5.0.4"
pylint = "^2.15.0"
toml = "^0.10.2"
types-toml = "^0.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint]
init-hook="import sys; sys.path.append('.')"

    [tool.pylint.messages_control]
    disable = [
        "missing-module-docstring",
        "missing-class-docstring",
        "missing-function-docstring",
        "too-few-public-methods",
    ]

    [tool.pylint.basic_checker]
    good-names=['i', 'j', 'k', '_', 'fn']


[tool.bandit.assert_used]
skips = ['./tests/*', './docs/*']
